adding routing funcitonality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,1 @@
-<h1>{{appName + ' app'}}</h1>
-<input type="text" [(ngModel)]="appName">
-<button (click)="toggleChildComponent()">Toggle Child</button>
-<div>
-  <app-child-component *ngIf="toggleChild"></app-child-component>
-</div>
+<router-outlet></router-outlet>
