--- a/src/app/child-component/child-component.component.html
+++ b/src/app/child-component/child-component.component.html
@@ -4,3 +4,7 @@
 <div>
   <app-child-component *ngIf="toggleChild"></app-child-component>
 </div>
+
+<div *ngFor="let post of posts">
+  {{post.body}}
+</div>
