--- a/src/app/child-component/child-component.component.html
+++ b/src/app/child-component/child-component.component.html
@@ -5,6 +5,6 @@
   <app-child-component *ngIf="toggleChild"></app-child-component>
 </div>
 
-<div *ngFor="let post of posts">
-  {{post.body}}
-</div>
+<ul>
+  <li *ngFor="let post of posts" class="post">{{post.body}}</li>
+</ul>
