--- a/src/app/category-landing/category-landing.component.html
+++ b/src/app/category-landing/category-landing.component.html
@@ -2,9 +2,5 @@
   {{routeName}}
 </p>
 <div *ngFor="let item of apparels" class="apparel-item">
-  <img src="{{item.imageUrl}}" alt="">
-  {{item.title}}
-  {{item.price}}
-  {{item.quantity}}
-  {{item.sizes}}
+  <img src="{{item.imageUrl}}" alt=""> {{item.title}} {{item.price}} {{item.quantity}} {{item.sizes}}
 </div>
