--- a/src/app/category-landing/category-landing.component.css
+++ b/src/app/category-landing/category-landing.component.css
@@ -1,8 +1,20 @@
 .apparel-item {
-    width: 50%;
+    width:33%;
     float: left;
     text-align: center;
+    box-sizing: border-box;
+    box-shadow: none !important;
 }
-.apparel-item:nth-of-type(odd) {
+.apparel-item:nth-of-type(3n+1) {
     clear: both;
+}
+.mat-card-image {
+    width: 33%;
+    height: auto;
+    max-width: 180px;
+}
+.apparel-item_inner {
+    box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.3);
+    box-sizing: border-box;
+    padding: 20px;
 }
