--- a/src/app/category-landing/category-landing.component.css
+++ b/src/app/category-landing/category-landing.component.css
@@ -9,12 +9,20 @@
     clear: both;
 }
 .mat-card-image {
-    width: 33%;
+    width: 75%;
     height: auto;
-    max-width: 180px;
 }
 .apparel-item_inner {
     box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.3);
     box-sizing: border-box;
     padding: 20px;
+}
+.mat-card-header-text {
+    width: 100% !important;
+}
+.size-selector, .quantity-selector {
+    width: 75%;
+    box-sizing: border-box;
+    display: block;
+    margin: 0 auto;
 }
