--- a/src/app/category-landing/category-landing.component.html
+++ b/src/app/category-landing/category-landing.component.html
@@ -14,7 +14,9 @@
   <div class="apparel-item_inner">
     <mat-card-header>
       <div mat-card-avatar class="example-header-image">
-        <!-- <img src="{{item.imageUrl}}" alt="" class=""> -->
+        <!-- <button mat-icon-button color="primary">
+          <mat-icon aria-label="Example icon-button with a heart icon">favorite</mat-icon>
+        </button> -->
       </div>
       <mat-card-title>{{item.title}}</mat-card-title>
       <!-- <mat-card-subtitle>Dog Breed</mat-card-subtitle> -->
@@ -22,14 +24,26 @@
     <img mat-card-image src="{{item.imageUrl}}" alt="">
     <mat-card-content>
       <p>
-        {{item.price}}
-        {{item.quantity}}
-        {{item.sizes}}
+        Price: {{item.price}}
+        <mat-form-field class="quantity-selector">
+          <mat-select placeholder="Quantity">
+            <mat-option *ngFor="let quant of item.quantity" [value]="quant">
+              {{quant}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field class="size-selector">
+          <mat-select placeholder="Available Sizes">
+            <mat-option *ngFor="let size of item.sizes" [value]="size">
+              {{size}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
       </p>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-button>VIEW</button>
-      <button mat-button>ADD TO CART</button>
+      <button mat-raised-button color="primary">VIEW</button>
+      <button mat-raised-button color="primary">ADD TO CART</button>
     </mat-card-actions>
   </div>
 </mat-card>
