--- a/src/app/category-landing/category-landing.component.html
+++ b/src/app/category-landing/category-landing.component.html
@@ -42,7 +42,7 @@
       </p>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-raised-button color="primary">VIEW</button>
+      <button mat-raised-button color="primary" (click)="openDialog(item)">VIEW</button>
       <button mat-raised-button color="primary">ADD TO CART</button>
     </mat-card-actions>
   </div>
