--- a/src/app/category-landing/category-landing.component.html
+++ b/src/app/category-landing/category-landing.component.html
@@ -1,15 +1,6 @@
 <p>
   {{routeName}}
 </p>
-<!-- <div *ngFor="let item of apparels" class="apparel-item">
-  <img src="{{item.imageUrl}}" alt="">
-  {{item.title}}
-  {{item.price}}
-  {{item.quantity}}
-  {{item.sizes}}
-</div> -->
-
-
 <mat-card class="apparel-item" *ngFor="let item of apparels">
   <div class="apparel-item_inner">
     <mat-card-header>
@@ -26,14 +17,14 @@
       <p>
         Price: {{item.price}}
         <mat-form-field class="quantity-selector">
-          <mat-select placeholder="Quantity">
+          <mat-select placeholder="Quantity" [(value)]="item.selectedQuantity">
             <mat-option *ngFor="let quant of item.quantity" [value]="quant">
               {{quant}}
             </mat-option>
           </mat-select>
         </mat-form-field>
         <mat-form-field class="size-selector">
-          <mat-select placeholder="Available Sizes">
+          <mat-select placeholder="Available Sizes" [(value)]="item.selectedSize">
             <mat-option *ngFor="let size of item.sizes" [value]="size">
               {{size}}
             </mat-option>
@@ -43,7 +34,7 @@
     </mat-card-content>
     <mat-card-actions>
       <button mat-raised-button color="primary" (click)="openDialog(item)">VIEW</button>
-      <button mat-raised-button color="primary">ADD TO CART</button>
+      <button mat-raised-button color="primary" (click)="addToCart(item)">ADD TO CART</button>
     </mat-card-actions>
   </div>
 </mat-card>
