--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
+<a routerLink="/category/shirt" routerLinkActive="active">Shirts</a>
+<a routerLink="/category/jeans" routerLinkActive="active">Jeans</a>
+<a routerLink="/payment" routerLinkActive="active">Go to Cart and make payment</a>
 <router-outlet></router-outlet>
